# swiss-data-ai-engineering-lab

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  DESCRIPTION  Dockerfile  LICENSE  Makefile  Manifest.toml  Project.toml  README.md  RUN_THIS_ON_WINDOWS_FIRST.ps1  RUN_WINDOWS_POWERSHELL.md  build.gradle  build.sbt  go.mod  go.sum  package-lock.json  package.json  pom.xml  publish_repo_windows.ps1  pyproject.toml  requirements.txt  setup_windows.ps1  tsconfig.json
api/: README.md  asyncapi.yaml  fastapi_app.py  openapi.yaml  transaction.proto
cleanup/: ICHIGRID_CLEANUP_PLAN.md  clean_ichigrid_gitbash.sh  clean_ichigrid_windows.ps1  ichigrid_target_README.md
config/: app.cfg  app.conf  app_config.yaml  application.properties  project_config.toml  settings.ini
data/: README.md  compression_transfer_notes.md
databases/: README.md
devops/: README.md
docs/: API_CONTRACTS.md  DATABASE_CATALOG.md  DEMO_GUIDE.md  DEVOPS_CLOUD_FILES.md  DOMAIN_ADAPTERS.md  EMPLOYER_MARKET_MAP.md  FILE_EXTENSION_MAP.md  FORMAT_CATALOG.md  GOVERNANCE_SECURITY.md  LANGUAGE_CATALOG.md  MLOPS_ARTIFACTS.md  OBSERVABILITY_GUIDE.md  PUBLIC_SAFETY_RULES.md  RECRUITER_GUIDE.md  SWISS_RECRUITMENT_POSITIONING.md  TECHNOLOGY_SCOPE.md  VALIDATION_REPORT.md  architecture.drawio  architecture.mmd  document_format_notes.md  html_report_example.html  restructured_text_example.rst
domains/: README.md  cloud_platform_bigtech.md  consulting_integrators.md  finance_banking.md  industry_manufacturing.md  insurance.md  logistics_energy_transport.md  (+3 more)
(+133 files in other folders)
