[project]
name = "swiss-data-ai-engineering-lab"
version = "0.1.0"
description = "Personal engineering lab for Swiss Data and AI recruitment positioning."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
